--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>com.vysp3r.ProtonPlus.desktop</id>
-	<metadata_license>CC0-1.0</metadata_license>
-	<project_license>GPL-3.0-or-later</project_license>
-	<description>
-	  <p>No description</p>
-	</description>
+    <id>com.vysp3r.ProtonPlus</id>
+    <metadata_license>FSFAP</metadata_license>
+    <project_license>GPL-3.0-or-later</project_license>
+    <content_rating type="oars-1.1" />
+
+    <name>ProtonPlus</name>
+    <developer_name>Vysp3r</developer_name>
+    <summary> A simple Wine and Proton-based compatiblity tools manager for GNOME </summary>
+    <description>
+        <p>ProtonPlus a simple Wine and Proton-based compatiblity tools manager for GNOME. It works with Steam, Lutris, Heroic Games Launcher and Bottles. It was made in Vala with GTK4 and Libadwaita using GNOME Builder.</p>
+    </description>
+
+    <screenshots>
+        <screenshot type="default">
+            <image>https://github.com/Vysp3r/ProtonPlus/raw/main/Preview.png</image>
+        </screenshot>
+    </screenshots>
+
+    <url type="homepage">https://github.com/Vysp3r/ProtonPlus</url>
+    <url type="bugtracker">https://github.com/Vysp3r/ProtonPlus/issues</url>
+
+    <launchable type="desktop-id">com.Vysp3r.ProtonPlus.desktop</launchable>
+    <releases>
+        <release version="0.1.3" date="2022-11-19" />
+        <release version="0.1.2" date="2022-11-2" />
+        <release version="0.1.1" date="2018-10-24" />
+        <release version="0.1.0" date="2014-10-23" />
+    </releases>
 </component>
