--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -21,8 +21,9 @@
     <url type="homepage">https://github.com/Vysp3r/ProtonPlus</url>
     <url type="bugtracker">https://github.com/Vysp3r/ProtonPlus/issues</url>
 
-    <launchable type="desktop-id">com.Vysp3r.ProtonPlus.desktop</launchable>
+    <launchable type="desktop-id">com.vysp3r.ProtonPlus.desktop</launchable>
     <releases>
+        <release version="0.1.6" date="2022-11-20" />
         <release version="0.1.3" date="2022-11-19" />
         <release version="0.1.2" date="2022-11-2" />
         <release version="0.1.1" date="2018-10-24" />
