:hammer: Update appdata

--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -14,7 +14,10 @@
 
     <screenshots>
         <screenshot type="default">
-            <image>https://github.com/Vysp3r/ProtonPlus/raw/main/Preview.png</image>
+            <image>https://raw.githubusercontent.com/Vysp3r/ProtonPlus/main/Preview-1.png</image>
+        </screenshot>
+        <screenshot>
+            <image>https://raw.githubusercontent.com/Vysp3r/ProtonPlus/main/Preview-2.png</image>
         </screenshot>
     </screenshots>
 
