--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -26,6 +26,7 @@
 
     <launchable type="desktop-id">com.vysp3r.ProtonPlus.desktop</launchable>
     <releases>
+        <release version="0.2.0" date="2022-11-27" />
         <release version="0.1.9" date="2022-11-21" />
         <release version="0.1.3" date="2022-11-19" />
         <release version="0.1.2" date="2022-11-2" />
