--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -12,6 +12,11 @@
         <p>ProtonPlus a simple Wine and Proton-based compatiblity tools manager for GNOME. It works with Steam, Lutris, Heroic Games Launcher and Bottles. It was made in Vala with GTK4 and Libadwaita using GNOME Builder.</p>
     </description>
 
+    <url type="homepage">https://github.com/Vysp3r/ProtonPlus</url>
+    <url type="bugtracker">https://github.com/Vysp3r/ProtonPlus/issues</url>
+
+    <launchable type="desktop-id">com.vysp3r.ProtonPlus.desktop</launchable>
+
     <screenshots>
         <screenshot type="default">
             <image>https://raw.githubusercontent.com/Vysp3r/ProtonPlus/main/Preview-1.png</image>
@@ -21,16 +26,106 @@
         </screenshot>
     </screenshots>
 
-    <url type="homepage">https://github.com/Vysp3r/ProtonPlus</url>
-    <url type="bugtracker">https://github.com/Vysp3r/ProtonPlus/issues</url>
-
-    <launchable type="desktop-id">com.vysp3r.ProtonPlus.desktop</launchable>
     <releases>
-        <release version="0.2.0" date="2022-11-27" />
-        <release version="0.1.9" date="2022-11-21" />
-        <release version="0.1.3" date="2022-11-19" />
-        <release version="0.1.2" date="2022-11-2" />
-        <release version="0.1.1" date="2022-10-24" />
-        <release version="0.1.0" date="2022-10-23" />
+        <release version="0.2.0" date="2022-11-29">
+          <description>
+            <p>For stability reasons, I've decided to disable Bottles and Heroic Games Launcher support for now. I also disabled Proton Tkg for the same reasons.</p>
+            <p>What's Changed:</p>
+            <ul>
+              <li>✨ Add NorthstarProton compatibility tool</li>
+              <li>🐛 Fix NorthstarProton not showing up</li>
+              <li>🔨 Update flatpak config</li>
+              <li>💬 Renamed tools in a uniform way</li>
+              <li>🧑‍💻 Project refactor</li>
+              <li>🚸 Add error message to selector</li>
+              <li>🔨 Update appdata</li>
+              <li>💬 Update the release notes</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.1.9" date="2022-11-21">
+          <description>
+            <p>We are now officialy on Flathub!</p>
+            <p>What's Changed:</p>
+            <ul>
+              <li>🔨 Update appdata</li>
+              <li>🔨 Update flatpak config</li>
+              <li>🍱 Update symbolic icon</li>
+              <li>🍱 Add icon</li>
+              <li>🔨 Update .desktop</li>
+              <li>🍱 Update the preview image</li>
+              <li>🍱 Add a preview image</li>
+              <li>🐛 Fix install button always being clickable</li>
+              <li>💬 Update the release notes</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.1.3" date="2022-11-19">
+          <description>
+            <p>The new naming convention for extracted directories is basically making sure each installed tools is easily recognizable to make it easier to manage them.</p>
+            <p>Naming convention: Tool name + Tool version</p>
+            <p>Example: GE-Proton | GE-Proton7-41</p>
+            <p>What's Changed:</p>
+            <ul>
+              <li>✏️ Fix typo in the release notes</li>
+              <li>🍱 Update the preview image</li>
+              <li>⚰️ Remove unused custom widget</li>
+              <li>🚧 Add notifications tab</li>
+              <li>💄 Update selector window components to Libadwaita</li>
+              <li>🧱 Separate Release from CompatibilityTool</li>
+              <li>🧱 Rename CompatibilityTool to Tool</li>
+              <li>⚰️ Remove unused file</li>
+              <li>💄 Update home message dialog to libadwaita</li>
+              <li>⚰️ Remove unused custom widget</li>
+              <li>✨ Added a naming convention extracted directories</li>
+              <li>🚚 Rename compatibilitytool to tool</li>
+              <li>💬 Update the release notes</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.1.2" date="2022-11-2">
+          <description>
+            <p>ProtonPlus now requires Libadwaita version 1.2 or higher.</p>
+            <p>What's Changed:</p>
+            <ul>
+              <li>📝 Update README.md</li>
+              <li>🐛 Fix Preferences window default siz</li>
+              <li>💄 Move main window to Libadwaita</li>
+              <li>💄 Move about window to Libadwaita</li>
+              <li>⚰️ Remove dead code</li>
+              <li>💄 Update main window components to Libadwaita</li>
+              <li>⚰️ Remove dead code</li>
+              <li>💄 Add an effect when extracting a tool</li>
+              <li>🐛 Fix label not showing up</li>
+              <li>🐛 Fix wrong label showing up</li>
+              <li>💄 Update preferences window to Libadwaita</li>
+              <li>⬆️ Update the runtime version</li>
+              <li>💬 Update the release notes</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.1.1" date="2022-10-24">
+          <description>
+            <p>What's Changed:</p>
+            <ul>
+              <li>🐛 Fix Steam not showing up on fresh install</li>
+              <li>🐛 Fix Kron4ek Wine-Builds Vanilla not showing properly</li>
+              <li>🐛 Fix installed tools showing files</li>
+              <li>🐛 Fix selector closing after an installation</li>
+              <li>🐛 Fix extraction not always working</li>
+              <li>📝 Update README.md</li>
+              <li>🐛 Fix Lutris DXVK not showing up</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.1.0" date="2022-10-23">
+          <description>
+            <p>What's Changed:</p>
+            <ul>
+              <li>🎉  Initial release</li>
+              <li>📝 Create pull request template</li>
+            </ul>
+          </description>
+        </release>
     </releases>
 </component>
