--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -36,6 +36,7 @@
               <li>🐛 Fix tool renaming for nothing</li>
               <li>🐛 Fix selector window freezing</li>
               <li>🐛 Fix Gtk-Critical errors</li>
+              <li>🐛 Fix buttons being active by default in selector</li>
               <li>💬 Update the release notes</li>
             </ul>
           </description>
