:technologist: Add new message dialog widget

--- a/src/meson.build
+++ b/src/meson.build
@@ -20,6 +20,7 @@ protonplus_sources = [
   'views/Notifications.vala',
 
   'widgets/ProtonComboRow.vala',
+  'widgets/ProtonMessageDialog.vala',
 
   'windows/Home.vala',
   'windows/HomeInfo.vala',
