--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -28,7 +28,24 @@
     </screenshots>
 
     <releases>
-          <release version="0.2.1" date="2022-12-01">
+        <release version="0.2.2" date="2022-12-03">
+          <description>
+            <p>What's Changed:</p>
+            <ul>
+              <li>🧑‍💻 Project refactor</li>
+              <li>🐛 Fix ListBox missing scrollbar</li>
+              <li>✨ Add launcher cleanup utility</li>
+              <li>🐛 Fix possible crash scenario</li>
+              <li>➖ Remove Posix dependency</li>
+              <li>🐛 Fix button always being active</li>
+              <li>🧑‍💻 Add new message dialog widget</li>
+              <li>🐛 Fix useless log showing up</li>
+              <li>🔨 Update appdata</li>
+              <li>💬 Update the release notes</li>
+            </ul>
+          </description>
+        </release>
+        <release version="0.2.1" date="2022-12-01">
           <description>
             <p>What's Changed:</p>
             <ul>
