:truck: Renamed HomeInfo to AboutTool

--- a/src/meson.build
+++ b/src/meson.build
@@ -23,7 +23,7 @@ protonplus_sources = [
   'widgets/ProtonMessageDialog.vala',
 
   'windows/Home.vala',
-  'windows/HomeInfo.vala',
+  'windows/AboutTool.vala',
   'windows/Preferences.vala',
   'windows/Selector.vala',
 
