--- a/meson.build
+++ b/meson.build
@@ -1,17 +1,23 @@
 project('protonplus', ['c', 'vala'],
-          version: '0.2.0',
+          version: '0.2.4',
     meson_version: '>= 0.59.0',
-  default_options: [ 'warning_level=2',
-                     'werror=false',
-                   ],
+  default_options: [ 'warning_level=2', 'werror=false', ],
 )
 
 i18n = import('i18n')
-
 gnome = import('gnome')
+
+conf = configuration_data()
+conf.set_quoted('GETTEXT_PACKAGE', meson.project_name())
+conf.set_quoted('DATADIR', join_paths(get_option('prefix'), get_option('datadir')))
+conf.set_quoted('GNOMELOCALEDIR', join_paths(get_option('prefix'), get_option('localedir')))
+
+configure_file(output: 'config.h', configuration: conf)
+config_h_dir = include_directories('.')
 
 subdir('data')
 subdir('src')
+subdir('po')
 
 gnome.post_install(
   glib_compile_schemas: true,
