--- a/data/com.vysp3r.ProtonPlus.desktop
+++ b/data/com.vysp3r.ProtonPlus.desktop
@@ -4,5 +4,5 @@ Exec=protonplus
 Icon=com.vysp3r.ProtonPlus
 Terminal=false
 Type=Application
-Categories=Games;
+Categories=Game;
 StartupNotify=true
