:technologist: Project refactor

--- a/po/meson.build
+++ b/po/meson.build
@@ -1,1 +1,5 @@
-i18n.gettext(meson.project_name(), preset: 'glib')
+i18n.gettext(
+    meson.project_name(),
+    args: '--directory=' + meson.current_source_dir(),
+    preset: 'glib'
+)
