--- a/data/meson.build
+++ b/data/meson.build
@@ -1,17 +1,22 @@
-protonplus_sources = gnome.compile_resources('protonplus-resources',
+gresource = gnome.compile_resources('protonplus-resources',
   'com.vysp3r.ProtonPlus.gresource.xml',
   c_name: 'protonplus'
 )
 
-desktop_file = install_data('com.vysp3r.ProtonPlus.desktop',
+#
+desktop_file = install_data(
+  'com.vysp3r.ProtonPlus.desktop',
   install_dir: join_paths(get_option('datadir'), 'applications')
 )
 
-appstream_file = install_data('com.vysp3r.ProtonPlus.appdata.xml',
+#
+appstream_file = install_data(
+  'com.vysp3r.ProtonPlus.appdata.xml',
   install_dir: join_paths(get_option('datadir'), 'appdata')
 )
 
-install_data('com.vysp3r.ProtonPlus.gschema.xml',
+install_data(
+  'com.vysp3r.ProtonPlus.gschema.xml',
   install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
 )
 
@@ -22,4 +27,5 @@ if compile_schemas.found()
   )
 endif
 
+#
 subdir('icons')
