--- a/meson.build
+++ b/meson.build
@@ -25,9 +25,10 @@ executable(
         dependency('gtk4'),
         dependency('glib-2.0'),
         dependency('libadwaita-1', version: '>= 1.2'),
-  	dependency('json-glib-1.0'),
-  	dependency('libsoup-3.0'),
-  	dependency('libarchive'),
+        dependency('gee-0.8')
+  	    dependency('json-glib-1.0'),
+        dependency('libsoup-3.0'),
+  	    dependency('libarchive'),
         meson.get_compiler('vala').find_library('posix'),
     ],
     install: true
