:art: Improved Utils.Filesystem code structure
I combined Utils.File and Utils.Dir into Utils.Filesystem. I renamed some functions with a better name. I cleaned a bit the code at the same time.

--- a/src/meson.build
+++ b/src/meson.build
@@ -13,8 +13,7 @@ constants = configure_file(
 #
 sources = files(
   'Utils/Web.vala',
-  'Utils/File.vala',
-  'Utils/Dir.vala',
+  'Utils/Filesystem.vala',
 
   'Models/Tool.vala',
   'Models/Launcher.vala',
