--- a/data/meson.build
+++ b/data/meson.build
@@ -1,31 +1,60 @@
-gresource = gnome.compile_resources('protonplus-resources',
-  'com.vysp3r.ProtonPlus.gresource.xml',
-  c_name: 'protonplus'
-)
+#
+subdir('css')
 
 #
-desktop_file = install_data(
-  'com.vysp3r.ProtonPlus.desktop',
-  install_dir: join_paths(get_option('datadir'), 'applications')
-)
+subdir('icons')
 
 #
-appstream_file = install_data(
-  'com.vysp3r.ProtonPlus.appdata.xml',
-  install_dir: join_paths(get_option('datadir'), 'appdata')
+subdir('images')
+
+#
+install_data(
+		join_paths('logo', 'com.vysp3r.ProtonPlus.svg'),
+		install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', '32x32', 'apps'),
+		rename: meson.project_name() + '.svg'
 )
 
 install_data(
-  'com.vysp3r.ProtonPlus.gschema.xml',
+		join_paths('logo', 'com.vysp3r.ProtonPlus.svg'),
+		install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', '32x32' + '@2', 'apps'),
+		rename: meson.project_name() + '.svg'
+)
+
+#
+desktop_file = i18n.merge_file(
+        input: 'com.vysp3r.ProtonPlus.desktop.in',
+       output: 'com.vysp3r.ProtonPlus.desktop',
+         type: 'desktop',
+       po_dir: '../po',
+      install: true,
+  install_dir: join_paths(get_option('datadir'), 'applications')
+)
+
+desktop_utils = find_program('desktop-file-validate', required: false)
+if desktop_utils.found()
+  test('Validate desktop file', desktop_utils, args: [desktop_file])
+endif
+
+appstream_file = i18n.merge_file(
+        input: 'com.vysp3r.ProtonPlus.appdata.xml.in',
+       output: 'com.vysp3r.ProtonPlus.appdata.xml',
+       po_dir: '../po',
+      install: true,
+  install_dir: join_paths(get_option('datadir'), 'appdata')
+)
+
+appstream_util = find_program('appstream-util', required: false)
+if appstream_util.found()
+  test('Validate appstream file', appstream_util, args: ['validate', appstream_file])
+endif
+
+install_data('com.vysp3r.ProtonPlus.gschema.xml',
   install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
 )
 
 compile_schemas = find_program('glib-compile-schemas', required: false)
 if compile_schemas.found()
-  test('Validate schema file', compile_schemas,
-    args: ['--strict', '--dry-run', meson.current_source_dir()]
-  )
+  test('Validate schema file',
+       compile_schemas,
+       args: ['--strict', '--dry-run', meson.current_source_dir()])
 endif
-
-#
-subdir('icons')
