--- a/src/constants.vala.in
+++ b/src/constants.vala.in
@@ -1,4 +1,4 @@
-namespace ProtonPlus.Shared.Constants {
+namespace ProtonPlus.Constants {
     const string APP_NAME = "ProtonPlus";
     const string APP_ID = @APP_ID@;
     const string APP_VERSION = @APP_VERSION@;
