--- a/data/com.vysp3r.ProtonPlus.appdata.xml.in
+++ b/data/com.vysp3r.ProtonPlus.appdata.xml.in
@@ -53,6 +53,20 @@
   </screenshots>
 
   <releases>
+    <release version="0.4.12" date="2024-07-17">
+      <description>
+        <ul>
+          <li>🐛 Fix appdata</li>
+        </ul>
+      </description>
+    </release>
+    <release version="0.4.11" date="2024-07-17">
+      <description>
+        <ul>
+          <li>🌐 Updated localization</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.4.10" date="2024-04-29">
       <description>
         <ul>
