--- a/src/meson.build
+++ b/src/meson.build
@@ -33,6 +33,7 @@ sources = files(
 
   'utils/filesystem.vala',
   'utils/web.vala',
+  'utils/gui.vala',
   'utils/parser.vala',
   'utils/system.vala',
 )
