Restore missing access to the Flatpak versions of apps
When we switched to "home", we lost access to the Flatpak ".var" directories for the supported apps.

We must request each of those apps individually, so the previous permissions for those app data directories has now been restored.

--- a/com.vysp3r.ProtonPlus.local.yml
+++ b/com.vysp3r.ProtonPlus.local.yml
@@ -18,6 +18,11 @@ finish-args:
   # Home is required due to "~/stl" installations on Steam Deck.
   - --filesystem=home
   - --filesystem=xdg-run/gvfsd
+  # Request access to supported Flatpak apps (they are not included by "home").
+  - --filesystem=~/.var/app/com.heroicgameslauncher.hgl/config/heroic
+  - --filesystem=~/.var/app/com.usebottles.bottles/data/bottles
+  - --filesystem=~/.var/app/com.valvesoftware.Steam/data/Steam
+  - --filesystem=~/.var/app/net.lutris.Lutris/data/lutris
 build-options:
   append-path: /usr/lib/sdk/vala/bin
   prepend-ld-library-path: /usr/lib/sdk/vala/lib
