Fixed incorrect US English spelling

--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -241,7 +241,7 @@
         <ul>
           <li>✨ Add warning for gamescope compatibility issues</li>
           <li>🔇 Remove debug log</li>
-          <li>🐛 Fix download getting cancelled randomly</li>
+          <li>🐛 Fix download getting canceled randomly</li>
           <li>🌐 Added missing translations</li>
           <li>🔨 Update appdata</li>
           <li>💬 Update the release notes</li>
