--- a/data/meson.build
+++ b/data/meson.build
@@ -8,32 +8,10 @@ subdir('icons')
 subdir('images')
 
 #
-icon_sizes = ['32', '48', '64', '128']
-foreach i : icon_sizes
-  install_data(
-      join_paths('logo', 'com.vysp3r.ProtonPlus.png'),
-      install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', i + 'x' + i, 'apps'),
-      rename: meson.project_name() + '.png'
-  )
-
-  install_data(
-      join_paths('logo', 'com.vysp3r.ProtonPlus.png'),
-      install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', i + 'x' + i + '@2', 'apps'),
-      rename: meson.project_name() + '.png'
-  )
-
-  install_data(
+install_data(
       join_paths('logo', 'com.vysp3r.ProtonPlus.svg'),
-      install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', i + 'x' + i, 'apps'),
-      rename: meson.project_name() + '.svg'
-  )
-
-  install_data(
-      join_paths('logo', 'com.vysp3r.ProtonPlus.svg'),
-      install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', i + 'x' + i + '@2', 'apps'),
-      rename: meson.project_name() + '.svg'
-  )
-endforeach
+      install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
+)
 
 #
 desktop_file = i18n.merge_file(
