--- a/com.vysp3r.ProtonPlus.local.yml
+++ b/com.vysp3r.ProtonPlus.local.yml
@@ -14,10 +14,11 @@ finish-args:
   # Host-spawn access is needed to check if host contains dependencies,
   # and to execute Steam Tinker Launch's installer script on the host.
   - --talk-name=org.freedesktop.Flatpak
+  # Required GNOME/GTK permissions.
   - --talk-name=org.gtk.vfs.*
+  - --filesystem=xdg-run/gvfsd
   # Home is required due to "~/stl" installations on Steam Deck.
   - --filesystem=home
-  - --filesystem=xdg-run/gvfsd
   # Request access to supported Flatpak apps (they are not included by "home").
   - --filesystem=~/.var/app/com.heroicgameslauncher.hgl/config/heroic
   - --filesystem=~/.var/app/com.usebottles.bottles/data/bottles
