Update appstream description to mention Steam Tinker Launch

--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -14,6 +14,7 @@
     </ul>
     <p>Supported compatibility tools:</p>
     <ul>
+      <li>Steam Tinker Launch</li>
       <li>Proton-GE</li>
       <li>Luxtorpeda</li>
       <li>Boxtron</li>
