--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -59,6 +59,13 @@
   </screenshots>
 
   <releases>
+    <release version="0.4.17" date="2024-09-16">
+      <description>
+        <ul>
+          <li>🌐 Updated German translation</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.4.16" date="2024-09-12">
       <description>
         <ul>
