--- a/src/meson.build
+++ b/src/meson.build
@@ -17,52 +17,55 @@ sources = files(
   'widgets/info-box.vala',
   'widgets/status-box.vala',
   'widgets/sidebar.vala',
-  'widgets/release-row.vala',
   'widgets/release-row-button.vala',
+  'widgets/release-row.vala',
   'widgets/dialog.vala',
+
+  'widgets/release-rows/steamtinkerlaunch.vala',
+  'widgets/release-rows/basic.vala',
 
   'models/group.vala',
   'models/launcher.vala',
   'models/release.vala',
   'models/runner.vala',
 
-  'launchers/bottles.vala',
-  'launchers/hgl.vala',
-  'launchers/lutris.vala',
-  'launchers/steam.vala',
+  'models/launchers/bottles.vala',
+  'models/launchers/hgl.vala',
+  'models/launchers/lutris.vala',
+  'models/launchers/steam.vala',
 
-  'releases/steamtinkerlaunch.vala',
+  'models/runners/basic.vala',
+  'models/runners/github.vala',
+  'models/runners/github-action.vala',
+  'models/runners/gitlab.vala',
+  'models/runners/proton-ge.vala',
+  'models/runners/luxtorpeda.vala',
+  'models/runners/boxtron.vala',
+  'models/runners/roberta.vala',
+  'models/runners/northstar-proton.vala',
+  'models/runners/proton-ge-rstp.vala',
+  'models/runners/proton-tkg.vala',
+  'models/runners/steamtinkerlaunch.vala',
+  'models/runners/wine-ge.vala',
+  'models/runners/wine-lutris.vala',
+  'models/runners/kron4ek-wine-builds-staging-tkg.vala',
+  'models/runners/kron4ek-wine-builds-staging.vala',
+  'models/runners/kron4ek-wine-builds-vanilla.vala',
+  'models/runners/other.vala',
+  'models/runners/dxvk-async-sporif.vala',
+  'models/runners/dxvk-async-gnusenpai.vala',
+  'models/runners/dxvk-gpl-async-ph42on.vala',
+  'models/runners/dxvk-doitsujin.vala',
+  'models/runners/vkd3d-lutris.vala',
+  'models/runners/vkd3d-proton.vala',
 
-  'runners/basic.vala',
-  'runners/github.vala',
-  'runners/github-action.vala',
-  'runners/gitlab.vala',
-  'runners/proton-ge.vala',
-  'runners/luxtorpeda.vala',
-  'runners/boxtron.vala',
-  'runners/roberta.vala',
-  'runners/northstar-proton.vala',
-  'runners/proton-ge-rstp.vala',
-  'runners/proton-tkg.vala',
-  'runners/steamtinkerlaunch.vala',
-  'runners/wine-ge.vala',
-  'runners/wine-lutris.vala',
-  'runners/kron4ek-wine-builds-staging-tkg.vala',
-  'runners/kron4ek-wine-builds-staging.vala',
-  'runners/kron4ek-wine-builds-vanilla.vala',
-  'runners/other.vala',
-  'runners/dxvk-async-sporif.vala',
-  'runners/dxvk-async-gnusenpai.vala',
-  'runners/dxvk-gpl-async-ph42on.vala',
-  'runners/dxvk-doitsujin.vala',
-  'runners/vkd3d-lutris.vala',
-  'runners/vkd3d-proton.vala',
+  'models/releases/basic.vala',
+  'models/releases/steamtinkerlaunch.vala',
 
   'utils/filesystem.vala',
   'utils/web.vala',
   'utils/parser.vala',
   'utils/system.vala',
-  'utils/gui.vala',
 )
 
 protonplus_deps = [
