Update description to include Sarek

--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -22,6 +22,7 @@
       <li>NorthstarProton</li>
       <li>Proton-GE RTSP</li>
       <li>Proton Tkg</li>
+      <li>Sarek</li>
       <li>Wine-GE</li>
       <li>Wine-Lutris</li>
       <li>Lutris-GE</li>
