--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -66,7 +66,14 @@
   </screenshots>
 
   <releases>
-    <release version="0.4.19" date="2024-10-02">
+    <release version="0.4.20" date="2024-10-04">
+      <description>
+        <ul>
+          <li>💄 Switched app icon to PNG format due to poor SVG support in KDE</li>
+        </ul>
+      </description>
+    </release>
+    <release version="0.4.19" date="2024-10-03">
       <description>
         <ul>
           <li>🐛 Fix for Proton-Sarek support</li>
