--- a/src/meson.build
+++ b/src/meson.build
@@ -55,6 +55,8 @@ sources = files(
   'models/runners/northstar-proton.vala',
   'models/runners/proton-ge-rstp.vala',
   'models/runners/proton-tkg.vala',
+  'models/runners/proton-sarek.vala',
+  'models/runners/proton-sarek-async.vala',
   'models/runners/steamtinkerlaunch.vala',
   'models/runners/wine-ge.vala',
   'models/runners/wine-lutris.vala',
